# blive-DGLAB

./: 1.json  app.py  index.html  main.py  pyproject.toml  requirements.txt  test.py
app/: config.py
app/routers/: login.py
app/utils/: bilibili_login.py
static/: style.css
templates/: dashboard.html  index.html  login.html
